--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -2,9 +2,5 @@
   "orgName": "aghorpade Company",
   "edition": "Developer",
   "features": [],
-  "settings": {
-    "orgPreferenceSettings": {
-      "s1DesktopEnabled": true
-    }
-  }
+  "orgPreferences" : { "enabled": ["S1DesktopEnabled"] }
 }
